objects/Account_Message__c.object
<CustomObject>
    <fields>
        <fullName>EBILL_CT_EBILL_CONTACT_ROLE__c</fullName>
        <description>EBILL_CT_EBILL_CONTACT_ROLE</description>
        <inlineHelpText>EBILL_CT_EBILL_CONTACT_ROLE</inlineHelpText>
        <label>EBILL_CT_EBILL_CONTACT_ROLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_EMAIL2__c</fullName>
        <label>EBILL_CT_EBILL_EMAIL2__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_EMAIL__c</fullName>
        <description>EBILL_CT_EBILL_EMAIL</description>
        <inlineHelpText>EBILL_CT_EBILL_EMAIL</inlineHelpText>
        <label>EBILL_CT_EBILL_EMAIL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_MOB_PHONE__c</fullName>
        <description>EBILL_CT_EBILL_MOB_PHONE</description>
        <inlineHelpText>EBILL_CT_EBILL_MOB_PHONE</inlineHelpText>
        <label>EBILL_CT_EBILL_MOB_PHONE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_ORACLE_PARTY_SITE_ID__c</fullName>
        <description>EBILL_CT_EBILL_ORACLE_PARTY_SITE_ID</description>
        <inlineHelpText>EBILL_CT_EBILL_ORACLE_PARTY_SITE_ID</inlineHelpText>
        <label>EBILL_CT_EBILL_ORACLE_PARTY_SITE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_PRIMARY_FAX__c</fullName>
        <description>EBILL_CT_EBILL_PRIMARY_FAX</description>
        <inlineHelpText>EBILL_CT_EBILL_PRIMARY_FAX</inlineHelpText>
        <label>EBILL_CT_EBILL_PRIMARY_FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_PRIMARY_PHONE__c</fullName>
        <description>EBILL_CT_EBILL_PRIMARY_PHONE</description>
        <inlineHelpText>EBILL_CT_EBILL_PRIMARY_PHONE</inlineHelpText>
        <label>EBILL_CT_EBILL_PRIMARY_PHONE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_SALUTAION__c</fullName>
        <description>EBILL_CT_EBILL_SALUTAION</description>
        <inlineHelpText>EBILL_CT_EBILL_SALUTAION</inlineHelpText>
        <label>EBILL_CT_EBILL_SALUTAION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_TITLE__c</fullName>
        <description>EBILL_CT_EBILL_TITLE</description>
        <inlineHelpText>EBILL_CT_EBILL_TITLE</inlineHelpText>
        <label>EBILL_CT_EBILL_TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_SFDC_EBILL_1_DEFAULT_SITE_ID__c</fullName>
        <description>EBILL_CT_SFDC_EBILL_1_DEFAULT_SITE_ID</description>
        <inlineHelpText>EBILL_CT_SFDC_EBILL_1_DEFAULT_SITE_ID</inlineHelpText>
        <label>EBILL_CT_SFDC_EBILL_1_DEFAULT_SITE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_SFDC_EBILL_1_ISPRIMARY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EBILL_CT_SFDC_EBILL_1_ISPRIMARY</description>
        <inlineHelpText>EBILL_CT_SFDC_EBILL_1_ISPRIMARY</inlineHelpText>
        <label>EBILL_CT_SFDC_EBILL_1_ISPRIMARY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_SFDC_EBILL_DEFAULT_SITE_ID__c</fullName>
        <description>EBILL_CT_SFDC_EBILL_DEFAULT_SITE_ID</description>
        <inlineHelpText>EBILL_CT_SFDC_EBILL_DEFAULT_SITE_ID</inlineHelpText>
        <label>EBILL_CT_SFDC_EBILL_DEFAULT_SITE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_SFDC_EBILL_ISPRIMARY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EBILL_CT_SFDC_EBILL_ISPRIMARY</description>
        <inlineHelpText>EBILL_CT_SFDC_EBILL_ISPRIMARY</inlineHelpText>
        <label>EBILL_CT_SFDC_EBILL_ISPRIMARY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXCLUDE_ALT_SRC__c</fullName>
        <label>Y/N exclude Alternate Sourcing</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXCLUDE_DROP_SHIP__c</fullName>
        <label>Y/N exclude Vendor Drop Ship</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furniture_delivery_Code__c</fullName>
        <label>Furniture delivery Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INV_NUM_OF_COPIES__c</fullName>
        <label>INV NUM OF COPIES</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_exceeded__c</fullName>
        <formula>if(MAX(Len(ACCT_BT_BILL_ADD1__c), len(ACCT_BT_BILL_ADD1__c),len( ACCT_ST_SHIP_ADD2__c ), len( ACCT_ST_SHIP_ADD1__c ),len( ACCT_CUSTOMER_NAME__c ))&gt;30 ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length Exceeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OMAX_ACCT_ID__c</fullName>
        <label>OMAX ACCT ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMAX_BILL_TO_ADDR_ID__c</fullName>
        <label>OMAX BILL_TO ADDR ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMAX_SHIP_TO_ADDR_ID__c</fullName>
        <label>OMAX SHIP_TO ADDR ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPERATION__c</fullName>
        <label>OPERATION</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARENT_CODE__c</fullName>
        <label>PARENT CODE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_PD_BILLING_DELIVERY_METHOD__c</fullName>
        <label>PD_PD_BILLING_DELIVERY_METHOD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_PD_DETAIL__c</fullName>
        <description>PD_PD_DETAIL</description>
        <inlineHelpText>PD_PD_DETAIL</inlineHelpText>
        <label>PD_PD_DETAIL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_PD_DOC_NAME__c</fullName>
        <description>PD_PD_DOC_NAME</description>
        <inlineHelpText>PD_PD_DOC_NAME</inlineHelpText>
        <label>PD_PD_DOC_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_PD_DOC_TYPE__c</fullName>
        <description>PD_PD_DOC_TYPE</description>
        <inlineHelpText>PD_PD_DOC_TYPE</inlineHelpText>
        <label>PD_PD_DOC_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_PD_INCL_BACKUP_INC__c</fullName>
        <description>PD_PD_INCL_BACKUP_INC</description>
        <inlineHelpText>PD_PD_INCL_BACKUP_INC</inlineHelpText>
        <label>PD_PD_INCL_BACKUP_INC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_PD_INDIRECT__c</fullName>
        <description>PD_PD_INDIRECT</description>
        <inlineHelpText>PD_PD_INDIRECT</inlineHelpText>
        <label>PD_PD_INDIRECT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_PD_PAGE_BREAKS__c</fullName>
        <description>PD_PD_PAGE_BREAKS</description>
        <inlineHelpText>PD_PD_PAGE_BREAKS</inlineHelpText>
        <label>PD_PD_PAGE_BREAKS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_PD_PAY_FREQUENCY__c</fullName>
        <description>PD_PD_PAY_FREQUENCY</description>
        <inlineHelpText>PD_PD_PAY_FREQUENCY</inlineHelpText>
        <label>PD_PD_PAY_FREQUENCY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_PD_SORTS__c</fullName>
        <description>PD_PD_SORTS</description>
        <inlineHelpText>PD_PD_SORTS</inlineHelpText>
        <label>PD_PD_SORTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_PD_TOTALS__c</fullName>
        <description>PD_PD_TOTALS</description>
        <inlineHelpText>PD_PD_TOTALS</inlineHelpText>
        <label>PD_PD_TOTALS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHONEEXT__c</fullName>
        <label>PHONEEXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_DLV_LOC__c</fullName>
        <label>PREFERRED DLV LOC</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTIONAL_CATALOG_FLAG__c</fullName>
        <label>PROMO FLAG CATALOG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTIONAL_EMAIL_FLAG__c</fullName>
        <label>PROMO FLAG EMAIL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTIONAL_FAX_FLAG__c</fullName>
        <label>PROMO FAX</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTIONAL_FLYER_FLAG__c</fullName>
        <label>PROMO FLAG FLYER</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTIONAL_PHONE_FLAG__c</fullName>
        <label>PROMO FLAG PHONE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTIONAL_STUFFER_FLAG__c</fullName>
        <label>PROMO FLAG STUFFER</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Republish__c</fullName>
        <description>When field is populated it triggers workflow to send the corresponding outbound message.</description>
        <inlineHelpText>When field is populated it triggers workflow to send the corresponding outbound message.</inlineHelpText>
        <label>Republish</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SALES_CONTACT_PHONE_EXTENSION__c</fullName>
        <label>Sales Contact Phone Extension</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SALES_CT_SALES_CONTACT_FIRSTNAME__c</fullName>
        <description>SALES_CT_SALES_CONTACT_FIRSTNAME</description>
        <inlineHelpText>SALES_CT_SALES_CONTACT_FIRSTNAME</inlineHelpText>
        <label>SALES_CT_SALES_CONTACT_FIRSTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_CT_SALES_CONTACT_LASTNAME__c</fullName>
        <description>SALES_CT_SALES_CONTACT_LASTNAME</description>
        <inlineHelpText>SALES_CT_SALES_CONTACT_LASTNAME</inlineHelpText>
        <label>SALES_CT_SALES_CONTACT_LASTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_CT_SALES_CONTACT_ROLE__c</fullName>
        <description>SALES_CT_SALES_CONTACT_ROLE</description>
        <inlineHelpText>SALES_CT_SALES_CONTACT_ROLE</inlineHelpText>
        <label>SALES_CT_SALES_CONTACT_ROLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_CT_SALES_EMAIL__c</fullName>
        <description>SALES_CT_SALES_EMAIL</description>
        <inlineHelpText>SALES_CT_SALES_EMAIL</inlineHelpText>
        <label>SALES_CT_SALES_EMAIL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_CT_SALES_MOB_PHONE__c</fullName>
        <description>SALES_CT_SALES_MOB_PHONE</description>
        <inlineHelpText>SALES_CT_SALES_MOB_PHONE</inlineHelpText>
        <label>SALES_CT_SALES_MOB_PHONE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_CT_SALES_PRIMARY_FAX__c</fullName>
        <description>SALES_CT_SALES_PRIMARY_FAX</description>
        <inlineHelpText>SALES_CT_SALES_PRIMARY_FAX</inlineHelpText>
        <label>SALES_CT_SALES_PRIMARY_FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_CT_SALES_PRIMARY_PHONE__c</fullName>
        <description>SALES_CT_SALES_PRIMARY_PHONE</description>
        <inlineHelpText>SALES_CT_SALES_PRIMARY_PHONE</inlineHelpText>
        <label>SALES_CT_SALES_PRIMARY_PHONE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_CT_SALES_SALUTAION__c</fullName>
        <description>SALES_CT_SALES_SALUTAION</description>
        <inlineHelpText>SALES_CT_SALES_SALUTAION</inlineHelpText>
        <label>SALES_CT_SALES_SALUTAION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_CT_SALES_TITLE__c</fullName>
        <description>SALES_CT_SALES_TITLE</description>
        <inlineHelpText>SALES_CT_SALES_TITLE</inlineHelpText>
        <label>SALES_CT_SALES_TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_CT_SFDC_SALES_CONTACT_ID__c</fullName>
        <description>SALES_CT_SFDC_SALES_CONTACT_ID</description>
        <inlineHelpText>SALES_CT_SFDC_SALES_CONTACT_ID</inlineHelpText>
        <label>SALES_CT_SFDC_SALES_CONTACT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_CT_SFDC_SALES_CONTACT_ROLE_ID__c</fullName>
        <description>SALES_CT_SFDC_SALES_CONTACT_ROLE_ID</description>
        <inlineHelpText>SALES_CT_SFDC_SALES_CONTACT_ROLE_ID</inlineHelpText>
        <label>SALES_CT_SFDC_SALES_CONTACT_ROLE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFD201F_ACCOUNT_PROFILE__c</fullName>
        <label>SFD201F_ACCOUNT_PROFILE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_ID_for_First_Ship_to__c</fullName>
        <label>Sales Rep ID for First Ship-to</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAX_EXCEPTION_FLAG__c</fullName>
        <label>TAX_EXCEPTION_FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIER_1_ACCOUNT_CODE__c</fullName>
        <label>TIER 1 ACCOUNT CODE</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bin__c</fullName>
        <description>Used for record recycling to make unused records selectable while minimizing the chances of colliding locks.</description>
        <inlineHelpText>Used for record recycling to make unused records selectable while minimizing the chances of colliding locks.</inlineHelpText>
        <label>bin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Message</label>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>ACCT_CUSTOMER_NAME__c</columns>
        <columns>OPERATION__c</columns>
        <columns>Republish__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ACCT_ID_PROSPECT_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCT_ID_PROSPECT_ID__c</field>
            <operation>equals</operation>
            <value>0012S00002C8HkE</value>
        </filters>
        <label>Created Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>ACCT_CUSTOMER_NAME__c</columns>
        <columns>OPERATION__c</columns>
        <columns>Republish__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OMAX_ACCT_ID__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Created Yesterday</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>